# music-chord

./: Cargo.toml  README.md
data/: abc.abc  arpeggo.ly  broken-chord.ly  clef.ly  guitar.ly  main.ly  trumpet.ly
src/: chord.rs  lib.rs  main.rs  mode.rs  note.rs  scale.rs  utils.rs
tests/: chord.rs  scale.rs
